# any_type_storage

./: Any.hpp  AnyTypeStorage.hpp  CMakeLists.txt  Observer.hpp  README.md  UserTypes.hpp  UserTypesOperations.hpp  test.cpp
